--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,9 +9,10 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level1.Level1
-GameDefaultMap=/Game/Maps/Level1.Level1
-ServerDefaultMap=/Game/Maps/Level1.Level1
+EditorStartupMap=/Game/Maps/Title.Title
+GameDefaultMap=/Game/Maps/Title.Title
+ServerDefaultMap=/Game/Maps/Title.Title
+GameInstanceClass=/Game/Blueprints/BP_GI.BP_GI_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
